[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Tilemap/TileMap.gd" type="Script" id=1]
[ext_resource path="res://scenes/Tilemap/BasePlayer.gd" type="Script" id=2]
[ext_resource path="res://scenes/Tileset/tileset.tres" type="TileSet" id=3]
[ext_resource path="res://sprites/res/tileset/tileset_v6.tres" type="TileSet" id=4]

[node name="Map" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 32.0
margin_right = 640.0
margin_bottom = 256.0
mouse_filter = 2
color = Color( 0.87451, 0.690196, 0.443137, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
cell_tile_origin = 2
format = 1
tile_data = PoolIntArray( 131080, 0, 196616, 131081, 0, 5, 131082, 0, 131073, 131083, 0, 131073, 131084, 0, 131073, 131085, 0, 131073, 131086, 0, 65541, 131090, 0, 65539, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 9, 196616, 0, 6, 196622, 0, 65539, 196626, 0, 65539, 262148, 0, 6, 262152, 0, 6, 262158, 0, 65539, 262162, 0, 65539, 327684, 0, 65545, 327685, 0, 1, 327686, 0, 1, 327687, 0, 1, 327688, 0, 131080, 327694, 0, 65539, 327698, 0, 65539, 393230, 0, 131076, 393231, 0, 131073, 393232, 0, 131073, 393233, 0, 65536, 393234, 1073741824, 65537, 393235, 0, 65537, 458769, 0, 6 )
script = ExtResource( 1 )

[node name="TileMapDeco" type="TileMap" parent="TileMap"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 65535, 16, 0, 0, 16, 0, 1, 16, 0, 2, 16, 0, 3, 16, 0, 4, 16, 0, 5, 16, 0, 6, 16, 0, 7, 16, 0, 8, 16, 0, 9, 16, 0, 10, 16, 0, 11, 16, 0, 12, 16, 0, 13, 16, 0, 14, 16, 0, 15, 16, 0, 16, 16, 0, 17, 16, 0, 18, 16, 0, 19, 16, 0, 20, 16, 0, 131071, 16, 0, 65536, 2, 9, 65537, 2, 65548, 65538, 2, 3, 65540, 2, 131076, 65543, 2, 65548, 65551, 15, 0, 65556, 16, 0, 196607, 16, 0, 131072, 2, 65536, 131073, 2, 131075, 131074, 2, 196615, 131075, 2, 196613, 131076, 2, 65541, 131078, 2, 1, 131087, 15, 0, 131092, 16, 0, 262143, 16, 0, 196613, 2, 12, 196614, 2, 131073, 196615, 2, 65539, 196617, 2, 196609, 196618, 2, 196615, 196619, 2, 196608, 196620, 2, 262151, 196621, 2, 4, 196623, 15, 0, 196628, 16, 0, 327679, 16, 0, 262145, 2, 196608, 262146, 2, 131080, 262147, 2, 131072, 262149, 2, 65538, 262150, 2, 0, 262151, 2, 196616, 262153, 2, 196613, 262154, 2, 262144, 262155, 2, 196608, 262156, 2, 262151, 262157, 2, 4, 262159, 15, 0, 262164, 16, 0, 393215, 16, 0, 327681, 2, 65541, 327689, 2, 3, 327690, 2, 327680, 327691, 2, 2, 327692, 2, 327687, 327700, 16, 0, 458751, 16, 0, 393217, 2, 131078, 393219, 2, 65539, 393221, 2, 131077, 393222, 2, 131080, 393225, 2, 3, 393227, 2, 131081, 393236, 16, 0, 524287, 16, 0, 458758, 2, 131073, 458759, 2, 131079, 458761, 2, 131074, 458762, 2, 131084, 458763, 2, 0, 458765, 2, 4, 458767, 15, 0, 458772, 16, 0, 589823, 16, 0, 524288, 16, 0, 524289, 16, 0, 524290, 16, 0, 524291, 16, 0, 524292, 16, 0, 524293, 16, 0, 524294, 16, 0, 524295, 16, 0, 524296, 16, 0, 524297, 16, 0, 524298, 16, 0, 524299, 16, 0, 524300, 16, 0, 524301, 16, 0, 524302, 16, 0, 524303, 16, 0, 524304, 16, 0, 524305, 16, 0, 524306, 16, 0, 524307, 16, 0, 524308, 16, 0 )

[node name="BasePlayer" type="TileMap" parent="TileMap"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
cell_tile_origin = 1
format = 1
tile_data = PoolIntArray( 196609, 2, 0, 393219, 3, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="BaseEnemy" type="TileMap" parent="TileMap"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
cell_tile_origin = 1
format = 1
tile_data = PoolIntArray( 131090, 2, 0 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="on_passage_toggle" from="TileMap/BasePlayer" to="TileMap" method="_on_BasePlayer_on_passage_toggle"]
